STM32 fix&slim, Wifi manager ESP32, compiled binaries updated for all platforms

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-;env_default = esp8266
+;env_default = esp32
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -93,24 +93,11 @@ lib_ignore =
     HTTPClient
     httpClient
     EEPROM
-    https://github.com/anklimov/ModbusMaster
-    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
-    https://github.com/anklimov/DS2482_OneWire
-    DS2482_OneWire
-    OneWire
-    DallasTemperature
-    ModbusMaster
     Artnet
-    https://github.com/anklimov/Artnet.git
-    https://github.com/anklimov/ESP-Dmx
     HTTPClient
-    FastLED
-    Adafruit Unified Sensor
-    DHT sensor library for ESPx
-    DHT sensor library
-    Wire
     UIPEthernet
     ESP_EEPROM
+    EEPROM
 lib_deps =
     https://github.com/ebenolson/WIFIMANAGER-ESP32.git
     https://github.com/zhouhan0126/WebServer-esp32.git
@@ -121,6 +108,15 @@ lib_deps =
     Streaming
     ;ESP_EEPROM
     https://github.com/anklimov/NRFFlashStorage
+    Adafruit Unified Sensor
+    DHT sensor library for ESPx
+    https://github.com/anklimov/Artnet.git
+    https://github.com/anklimov/ModbusMaster
+    https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+    https://github.com/anklimov/DS2482_OneWire
+    https://github.com/anklimov/ESP-Dmx
+    FastLED
+
 [env:due]
 platform = atmelsam
 framework = arduino
@@ -139,6 +135,7 @@ lib_ignore =
     NRFFlashStorage
     WebServer
     UIPEthernet
+    EEPROM
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -216,6 +213,7 @@ lib_ignore =
     Ethernet
     NRFFlashStorage
     UIPEthernet
+    EEPROM
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -291,6 +289,7 @@ lib_ignore =
     WebServer
     UIPEthernet
     ESP_EEPROM
+    EEPROM
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -373,18 +372,21 @@ lib_ignore =
     Ethernet2
     Artnet
     Ethernet3
-    NRFFlashStorage
     WebServer
     ESP_EEPROM
-
+    DHT sensor library
+    DallasTemperature
+    Adafruit Unified Sensor
+    DS2482_OneWire
+    ModbusMaster
+    Syslog
+    Wire
+    EEPROM
 lib_deps =
-;    DallasTemperature
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
     ArduinoHttpClient
     https://github.com/knolleary/pubsubclient.git
-    Adafruit Unified Sensor
-    DHT sensor library
     Streaming
     UIPEthernet
-    ;EEPROM
+    https://github.com/anklimov/NRFFlashStorage
