ESP8266 fix (autoretrieve conf if 404) flash (aJson update required)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .clang_complete
 .gcc-flags.json
 CMakeListsPrivate.txt
+custom-build-flags/*
 build_flags_due.sh
 build_flags_esp32.sh
 build_flags_esp8266.sh
@@ -10,3 +11,4 @@ build_flags_stm32.sh
 build_flags_due-5500.sh
 build_flags_mega2560.sh
 build_flags_controllino.sh
+build_flags_nrf52840.sh
