Input modularity deployed (see lighthub/modules) CCS811 & HDC1080 almost developed as Input module Inputs core refactored

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-;env_default = esp32
+;env_default = esp8266
 ;monitor_speed = 115200
 ;    megaatmega2560
 ;    megaatmega2560-net
@@ -55,6 +55,8 @@ lib_ignore =
     WebServer
     UIPEthernet
     ;Adafruit_Sensor
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -71,6 +73,7 @@ lib_deps =
     Streaming
     https://github.com/anklimov/NRFFlashStorage
 ;    https://github.com/livello/PrintEx#is-select-redecl
+
 
 
 [env:esp32]
@@ -116,7 +119,8 @@ lib_deps =
     https://github.com/anklimov/DS2482_OneWire
     https://github.com/anklimov/ESP-Dmx
     FastLED
-
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 [env:due]
 platform = atmelsam
 framework = arduino
@@ -155,7 +159,8 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
-
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 
 [env:megaatmega2560]
 platform = atmelavr
@@ -192,6 +197,8 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 
 [env:esp8266]
 platform = espressif8266
@@ -232,6 +239,8 @@ lib_deps =
     https://github.com/arcao/Syslog.git
     Streaming
     ESP_EEPROM
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 
 [env:megaatmega2560-net]
 platform = atmelavr
@@ -269,6 +278,8 @@ lib_deps =
     DHT sensor library
     https://github.com/arcao/Syslog.git
     Streaming
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 
 [env:due-5500]
 platform = atmelsam
@@ -310,6 +321,8 @@ lib_deps =
     https://github.com/arcao/Syslog.git
     Streaming
     https://github.com/livello/PrintEx#is-select-redecl
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 
 [env:controllino]
 platform = atmelavr
@@ -347,6 +360,8 @@ lib_deps =
     DHT sensor library
     Streaming
     https://github.com/livello/PrintEx#is-select-redecl
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 
 [env:stm32]
 platform = ststm32
@@ -382,6 +397,8 @@ lib_ignore =
     Syslog
     Wire
     EEPROM
+    ClosedCube HDC1080
+    SparkFun CCS811 Arduino Library
 lib_deps =
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
