--- a/platformio.ini
+++ b/platformio.ini
@@ -9,19 +9,18 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = lighthub
-;env_default = esp8266
 ;monitor_speed = 115200
+;env_default = megaatmega2560-net
 ;    megaatmega2560
 ;    megaatmega2560-net
 ;    due
 ;    esp8266
 ;    esp32
 ;    megaatmega2560-5500
-;     due-5500
+;    due-5500
 ;    controllino
 ;    stm32
-;     esp32-evb
-;    nrf52840_dk
+;    nrf52840
 
 ;build_dir = /tmp/pioenvs
 ;libdeps_dir = /tmp/piolibdeps
