--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 ;home_dir = C:\platformio
 src_dir = lighthub
 ;monitor_speed = 115200
-env_default =
+default_envs =
 ;   ****** UNCOMMENT single environment name for target platform below *******
 ; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
 ;    mega2560slim-5100
@@ -29,7 +29,7 @@ env_default =
 ;    due-5100
 
 ; Arduino DUE + Ethernet shield Wiznet 5500
-;    due-5500
+    due-5500
 
 ; ESP 8266
 ;    esp8266-wifi
@@ -406,7 +406,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-build_flags = !check_custom_build_flags_due-5500.sh
+build_flags = !./check_custom_build_flags_due-5500.sh
 lib_ignore =
     DHT sensor library for ESPx
     ESPDMX
