--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ default_envs =
 ;    due-5100
 
 ; Arduino DUE + Ethernet shield Wiznet 5500
-;    due-5500
+;   due-5500
 
 ; ESP 8266
 ;    esp8266-wifi
@@ -58,7 +58,7 @@ board = nrf52840_dk
 ;upload_protocol = mbed
 ;upload_port = /dev/cu.SLAB_USBtoUART
 framework = arduino
-build_flags = !bash check_custom_build_flags_nrf52840.sh
+build_flags = !python get_build_flags.py nrf52840-5500
 lib_ignore =
     ESP_EEPROM
     DmxSimple
@@ -110,7 +110,7 @@ platform = espressif32
 board = m5stack-core-esp32
 framework = arduino
 upload_speed = 921600
-build_flags = !check_custom_build_flags_esp32.sh
+build_flags = !python get_build_flags.py m5stack
 lib_ignore =
     DmxSimple
     DMXSerial
@@ -157,7 +157,7 @@ framework = arduino
 ;board = pico32
 board = esp32-evb
 upload_speed = 115200
-build_flags = !bash check_custom_build_flags_esp32.sh
+build_flags = !python get_build_flags.py esp32-wifi
 lib_ignore =
     DmxSimple
     DMXSerial
@@ -201,7 +201,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-build_flags = !bash check_custom_build_flags_due.sh
+build_flags = !python get_build_flags.py due-5100
 lib_ignore =
     DHT sensor library for ESPx
     ESP_EEPROM
@@ -244,7 +244,7 @@ platform = atmelavr
 board = megaatmega2560
 ;upload_port = net:192.168.88.31:23
 framework = arduino
-build_flags = !bash check_custom_build_flags_mega2560-slim.sh
+build_flags = !python get_build_flags.py mega2560slim-5100
 lib_ignore =
     DHT sensor library for ESPx
     DmxDue
@@ -282,7 +282,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_flags = !bash check_custom_build_flags_mega2560-5500.sh
+build_flags = !python get_build_flags.py mega2560-5500
 lib_ignore =
         DHT sensor library for ESPx
         DmxDue
@@ -321,7 +321,7 @@ lib_deps =
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-build_flags = !bash check_custom_build_flags_esp8266.sh
+build_flags = !python get_build_flags.py esp8266-wifi
 lib_ignore =
     DmxSimple
     DMXSerial
@@ -367,7 +367,7 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 upload_port = net:192.168.88.2:23000
-build_flags = !bash check_custom_build_flags_mega2560.sh
+build_flags = !python get_build_flags.py mega2560-5100
 lib_ignore =
     DHT sensor library for ESPx
     DmxDue
@@ -406,7 +406,8 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-build_flags = !bash check_custom_build_flags_due-5500.sh
+;build_flags = !bash check_custom_build_flags_due-5500.sh
+build_flags = !python get_build_flags.py due-5500
 lib_ignore =
     DHT sensor library for ESPx
     ESPDMX
@@ -450,7 +451,7 @@ lib_deps =
 platform = atmelsam
 framework = arduino
 board = due
-build_flags = !bash check_custom_build_flags_lighthub21.sh
+build_flags = !python get_build_flags.py lighthub21
 lib_ignore =
         DHT sensor library for ESPx
         ESPDMX
@@ -495,7 +496,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_flags = !bash check_custom_build_flags_controllino.sh
+build_flags = !python get_build_flags.py controllino
 lib_ignore =
     DHT sensor library for ESPx
     DmxDue
@@ -537,7 +538,7 @@ framework = arduino
 board = nucleo_f103rb
 upload_protocol = stlink
 debug_tool = stlink
-build_flags = !bash check_custom_build_flags_stm32.sh
+build_flags = !python get_build_flags.py stm32-enc2860
 lib_ignore =
     DHT sensor library for ESPx
     DmxDue
