Adafruit NeoPixel library used instead fastLed (allow define [pin#,num,LEDorder] in configuration. Use FASTLED directive to revert FASTLed back

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,6 +101,7 @@ lib_deps =
     DHT sensor library
     Streaming
     https://github.com/anklimov/NRFFlashStorage
+    Adafruit NeoPixel
 ;    https://github.com/livello/PrintEx#is-select-redecl
 
 
@@ -150,6 +151,7 @@ lib_deps =
     ;SparkFun CCS811 Arduino Library
     https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git
     M5Stack
+    Adafruit NeoPixel
 
 [env:esp32-wifi]
 platform = espressif32
@@ -197,6 +199,7 @@ lib_deps =
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
     https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git
+    Adafruit NeoPixel
 [env:due-5100]
 platform = atmelsam
 framework = arduino
@@ -238,6 +241,7 @@ lib_deps =
     Streaming
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
+    Adafruit NeoPixel
 
 [env:mega2560slim-5100]
 platform = atmelavr
@@ -277,6 +281,7 @@ lib_deps =
     Streaming
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
+    Adafruit NeoPixel
 
 [env:mega2560-5500]
 platform = atmelavr
@@ -315,6 +320,7 @@ lib_deps =
         Streaming
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library
+        Adafruit NeoPixel
 
 
 [env:esp8266-wifi]
@@ -361,6 +367,7 @@ lib_deps =
     ESP_EEPROM
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
+    Adafruit NeoPixel
 
 [env:mega2560-5100]
 platform = atmelavr
@@ -401,6 +408,7 @@ lib_deps =
     Streaming
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
+    Adafruit NeoPixel
 
 [env:due-5500]
 platform = atmelsam
@@ -446,6 +454,7 @@ lib_deps =
     https://github.com/livello/PrintEx#is-select-redecl
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
+    Adafruit NeoPixel
 
 [env:lighthub21]
 platform = atmelsam
@@ -490,6 +499,7 @@ lib_deps =
         https://github.com/livello/PrintEx#is-select-redecl
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library
+        Adafruit NeoPixel
 
 
 [env:controllino]
@@ -531,6 +541,7 @@ lib_deps =
     https://github.com/livello/PrintEx#is-select-redecl
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
+    Adafruit NeoPixel
 
 [env:stm32-enc2860]
 platform = ststm32
@@ -576,3 +587,4 @@ lib_deps =
     Streaming
     UIPEthernet
     https://github.com/anklimov/NRFFlashStorage
+    Adafruit NeoPixel
