Modbus retry for VaCom fixed 1-st attempt to add OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ default_envs =
 ;    due-5100
 
 ; Arduino DUE + Ethernet shield Wiznet 5500
-;   due-5500
+   due-5500
 
 ; ESP 8266
 ;    esp8266-wifi
@@ -86,6 +86,7 @@ lib_ignore =
     SparkFun CCS811 Arduino Library
     ESP8266HTTPClient
     M5Stack
+
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
@@ -102,6 +103,7 @@ lib_deps =
     Streaming
     https://github.com/anklimov/NRFFlashStorage
     Adafruit NeoPixel
+    ArduinoOTA
 ;    https://github.com/livello/PrintEx#is-select-redecl
 
 
@@ -152,6 +154,7 @@ lib_deps =
     https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git
     M5Stack
     Adafruit NeoPixel
+    ArduinoOTA
 
 [env:esp32-wifi]
 platform = espressif32
@@ -200,6 +203,8 @@ lib_deps =
     ;SparkFun CCS811 Arduino Library
     https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git
     Adafruit NeoPixel
+    ArduinoOTA
+
 [env:due-5100]
 platform = atmelsam
 framework = arduino
@@ -242,6 +247,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     Adafruit NeoPixel
+    ArduinoOTA
 
 [env:mega2560slim-5100]
 platform = atmelavr
@@ -282,6 +288,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     Adafruit NeoPixel
+    ArduinoOTA
 
 [env:mega2560-5500]
 platform = atmelavr
@@ -321,12 +328,19 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library
         Adafruit NeoPixel
+        ArduinoOTA
 
 
 [env:esp8266-wifi]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
+upload_protocol = espota
+upload_port = Lighthub.local
+   ;192.168.88.46
+upload_flags =
+  --auth=password
+;  --port=65280
 build_flags = !python get_build_flags.py esp8266-wifi
 lib_ignore =
     DmxSimple
@@ -368,6 +382,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     Adafruit NeoPixel
+    ArduinoOTA
 
 [env:mega2560-5100]
 platform = atmelavr
@@ -409,6 +424,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     Adafruit NeoPixel
+    ArduinoOTA
 
 [env:due-5500]
 platform = atmelsam
@@ -432,6 +448,7 @@ lib_ignore =
     ESP_EEPROM
     EEPROM
     M5Stack
+    ArduinoOTA
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -455,6 +472,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     Adafruit NeoPixel
+
 
 [env:lighthub21]
 platform = atmelsam
@@ -500,6 +518,7 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library
         Adafruit NeoPixel
+        ArduinoOTA
 
 
 [env:controllino]
@@ -542,6 +561,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     Adafruit NeoPixel
+    ArduinoOTA
 
 [env:stm32-enc2860]
 platform = ststm32
@@ -588,3 +608,4 @@ lib_deps =
     UIPEthernet
     https://github.com/anklimov/NRFFlashStorage
     Adafruit NeoPixel
+    ArduinoOTA
