Smooth DMX fadind for DUE

--- a/platformio.ini
+++ b/platformio.ini
@@ -495,6 +495,7 @@ lib_ignore =
         ESP_EEPROM
         EEPROM
         M5Stack
+        ArduinoOTA
 lib_deps =
         https://github.com/sebnil/DueFlashStorage
         https://github.com/anklimov/Arduino-Temperature-Control-Library.git
