compilation fix after ccs811 lib refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -151,7 +151,7 @@ lib_deps =
     FastLED
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
-    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git
+    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git@~1.0.7
     M5Stack
     Adafruit NeoPixel
     ArduinoOTA
@@ -201,7 +201,7 @@ lib_deps =
     FastLED
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
-    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git
+    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git@~1.0.7
     Adafruit NeoPixel
     ArduinoOTA
 
@@ -245,7 +245,7 @@ lib_deps =
     https://github.com/arcao/Syslog.git
     Streaming
     ClosedCube HDC1080
-    SparkFun CCS811 Arduino Library
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     ArduinoOTA
 
@@ -286,7 +286,7 @@ lib_deps =
     https://github.com/arcao/Syslog.git
     Streaming
     ClosedCube HDC1080
-    SparkFun CCS811 Arduino Library
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     ArduinoOTA
 
@@ -326,7 +326,7 @@ lib_deps =
         https://github.com/arcao/Syslog.git
         Streaming
         ClosedCube HDC1080
-        SparkFun CCS811 Arduino Library
+        SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
         ArduinoOTA
 
@@ -380,7 +380,7 @@ lib_deps =
     Streaming
     ESP_EEPROM
     ClosedCube HDC1080
-    SparkFun CCS811 Arduino Library
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     ArduinoOTA
 
@@ -422,7 +422,7 @@ lib_deps =
     https://github.com/arcao/Syslog.git
     Streaming
     ClosedCube HDC1080
-    SparkFun CCS811 Arduino Library
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     ArduinoOTA
 
@@ -470,7 +470,7 @@ lib_deps =
     Streaming
     https://github.com/livello/PrintEx#is-select-redecl
     ClosedCube HDC1080
-    SparkFun CCS811 Arduino Library
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
 
 
@@ -517,7 +517,7 @@ lib_deps =
         Streaming
         https://github.com/livello/PrintEx#is-select-redecl
         ClosedCube HDC1080
-        SparkFun CCS811 Arduino Library
+        SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
         ArduinoOTA
 
@@ -560,7 +560,7 @@ lib_deps =
     Streaming
     https://github.com/livello/PrintEx#is-select-redecl
     ClosedCube HDC1080
-    SparkFun CCS811 Arduino Library
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     ArduinoOTA
 
