--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ default_envs =
 ;    due-5100
 
 ; Arduino DUE + Ethernet shield Wiznet 5500
-   due-5500
+;   due-5500
 
 ; ESP 8266
 ;    esp8266-wifi
@@ -86,6 +86,7 @@ lib_ignore =
     SparkFun CCS811 Arduino Library
     ESP8266HTTPClient
     M5Stack
+    ArduinoOTA
 
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -97,13 +98,13 @@ lib_deps =
     https://github.com/anklimov/ModbusMaster
     https://github.com/knolleary/pubsubclient.git
 ;    https://github.com/anklimov/Artnet.git
-;    FastLED
+;    FastLED@3.3.2
     Adafruit Unified Sensor
     DHT sensor library
     Streaming
     https://github.com/anklimov/NRFFlashStorage
     Adafruit NeoPixel
-    ArduinoOTA
+;    https://github.com/jandrassy/ArduinoOTA
 ;    https://github.com/livello/PrintEx#is-select-redecl
 
 
@@ -148,13 +149,13 @@ lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
     https://github.com/anklimov/ESP-Dmx
-    FastLED
+    FastLED@3.3.2
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
     https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git@~1.0.7
     M5Stack
     Adafruit NeoPixel
-    ArduinoOTA
+    https://github.com/jandrassy/ArduinoOTA
 
 [env:esp32-wifi]
 platform = espressif32
@@ -198,12 +199,12 @@ lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
     https://github.com/anklimov/DS2482_OneWire
     https://github.com/anklimov/ESP-Dmx
-    FastLED
+    FastLED@3.3.2
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
     https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git@~1.0.7
     Adafruit NeoPixel
-    ArduinoOTA
+    https://github.com/jandrassy/ArduinoOTA
 
 [env:due-5100]
 platform = atmelsam
@@ -225,6 +226,7 @@ lib_ignore =
     UIPEthernet
     EEPROM
     M5Stack
+    ArduinoOTA
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -237,7 +239,7 @@ lib_deps =
     https://github.com/anklimov/Ethernet
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
-    FastLED
+    FastLED@3.3.2
     SD
     SdFat
     Adafruit Unified Sensor
@@ -247,7 +249,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    ArduinoOTA
+    ;https://github.com/jandrassy/ArduinoOTA
 
 [env:mega2560slim-5100]
 platform = atmelavr
@@ -279,7 +281,7 @@ lib_deps =
     https://github.com/anklimov/Ethernet
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
-    FastLED
+    FastLED@3.3.2
     ;EEPROM
     Adafruit Unified Sensor
     DHT sensor library
@@ -288,7 +290,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    ArduinoOTA
+    https://github.com/jandrassy/ArduinoOTA
 
 [env:mega2560-5500]
 platform = atmelavr
@@ -320,7 +322,7 @@ lib_deps =
         https://github.com/anklimov/Ethernet2
         https://github.com/knolleary/pubsubclient.git
         https://github.com/anklimov/Artnet.git
-        FastLED
+        FastLED@3.3.2
         Adafruit Unified Sensor
         DHT sensor library
         https://github.com/arcao/Syslog.git
@@ -328,7 +330,7 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
-        ArduinoOTA
+        https://github.com/jandrassy/ArduinoOTA
 
 
 [env:esp8266-wifi]
@@ -384,6 +386,7 @@ lib_deps =
     Adafruit NeoPixel
     ArduinoOTA
 
+
 [env:mega2560-5100]
 platform = atmelavr
 board = megaatmega2560
@@ -416,7 +419,7 @@ lib_deps =
     https://github.com/anklimov/Ethernet
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
-    FastLED
+    FastLED@3.3.2
     Adafruit Unified Sensor
     DHT sensor library
     https://github.com/arcao/Syslog.git
@@ -424,7 +427,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    ArduinoOTA
+    https://github.com/jandrassy/ArduinoOTA
 
 [env:due-5500]
 platform = atmelsam
@@ -461,7 +464,7 @@ lib_deps =
     https://github.com/anklimov/Ethernet2
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
-    FastLED
+    FastLED@3.3.2
     SD
     SdFat
     Adafruit Unified Sensor
@@ -508,7 +511,7 @@ lib_deps =
         https://github.com/anklimov/Ethernet2
         https://github.com/knolleary/pubsubclient.git
         https://github.com/anklimov/Artnet.git
-        FastLED
+        FastLED@3.3.2
         SD
         SdFat
         Adafruit Unified Sensor
@@ -519,7 +522,7 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
-        ArduinoOTA
+        https://github.com/jandrassy/ArduinoOTA
 
 
 [env:controllino]
@@ -553,7 +556,7 @@ lib_deps =
     https://github.com/anklimov/Ethernet
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
-    FastLED
+    FastLED@3.3.2
     ;EEPROM
     Adafruit Unified Sensor
     DHT sensor library
@@ -562,7 +565,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    ArduinoOTA
+    https://github.com/jandrassy/ArduinoOTA
 
 [env:stm32-enc2860]
 platform = ststm32
@@ -600,6 +603,7 @@ lib_ignore =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library
     M5Stack
+    ArduinoOTA
 lib_deps =
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
@@ -609,4 +613,3 @@ lib_deps =
     UIPEthernet
     https://github.com/anklimov/NRFFlashStorage
     Adafruit NeoPixel
-    ArduinoOTA
