--- a/platformio.ini
+++ b/platformio.ini
@@ -86,7 +86,7 @@ lib_ignore =
     SparkFun CCS811 Arduino Library
     ESP8266HTTPClient
     M5Stack
-    ArduinoOTA
+    ;ArduinoOTA
 
 lib_deps =
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -103,8 +103,8 @@ lib_deps =
     DHT sensor library
     Streaming
     https://github.com/anklimov/NRFFlashStorage
-    Adafruit NeoPixel
-;    https://github.com/jandrassy/ArduinoOTA
+    https://github.com/adafruit/Adafruit_NeoPixel.git
+    https://github.com/anklimov/ArduinoOTA
 ;    https://github.com/livello/PrintEx#is-select-redecl
 
 
@@ -152,10 +152,10 @@ lib_deps =
     FastLED@3.3.2
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
-    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git@~1.0.7
+    SparkFun CCS811 Arduino Library@~1.0.7
     M5Stack
     Adafruit NeoPixel
-    https://github.com/jandrassy/ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA
 
 [env:esp32-wifi]
 platform = espressif32
@@ -202,9 +202,9 @@ lib_deps =
     FastLED@3.3.2
     ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
-    https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library.git@~1.0.7
+    SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    https://github.com/jandrassy/ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA
 
 [env:due-5100]
 platform = atmelsam
@@ -226,7 +226,7 @@ lib_ignore =
     UIPEthernet
     EEPROM
     M5Stack
-    ArduinoOTA
+    ;ArduinoOTA
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -249,7 +249,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    ;https://github.com/jandrassy/ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA
 
 [env:mega2560slim-5100]
 platform = atmelavr
@@ -290,7 +290,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    https://github.com/jandrassy/ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA
 
 [env:mega2560-5500]
 platform = atmelavr
@@ -330,18 +330,20 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
-        https://github.com/jandrassy/ArduinoOTA
+        https://github.com/anklimov/ArduinoOTA
 
 
 [env:esp8266-wifi]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-upload_protocol = espota
-upload_port = Lighthub.local
-   ;192.168.88.46
-upload_flags =
-  --auth=password
+upload_protocol = esptool
+
+;upload_protocol = espota
+;upload_port = Lighthub.local
+
+;upload_flags =
+;  --auth=password
 ;  --port=65280
 build_flags = !python get_build_flags.py esp8266-wifi
 lib_ignore =
@@ -384,7 +386,8 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA.git
+
 
 
 [env:mega2560-5100]
@@ -427,7 +430,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    https://github.com/jandrassy/ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA
 
 [env:due-5500]
 platform = atmelsam
@@ -451,7 +454,7 @@ lib_ignore =
     ESP_EEPROM
     EEPROM
     M5Stack
-    ArduinoOTA
+    ;ArduinoOTA
 lib_deps =
     https://github.com/sebnil/DueFlashStorage
     https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -475,7 +478,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-
+    https://github.com/anklimov/ArduinoOTA
 
 [env:lighthub21]
 platform = atmelsam
@@ -498,7 +501,7 @@ lib_ignore =
         ESP_EEPROM
         EEPROM
         M5Stack
-        ArduinoOTA
+        ;ArduinoOTA
 lib_deps =
         https://github.com/sebnil/DueFlashStorage
         https://github.com/anklimov/Arduino-Temperature-Control-Library.git
@@ -522,7 +525,7 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
-        https://github.com/jandrassy/ArduinoOTA
+        https://github.com/anklimov/ArduinoOTA
 
 
 [env:controllino]
@@ -565,7 +568,7 @@ lib_deps =
     ClosedCube HDC1080
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
-    https://github.com/jandrassy/ArduinoOTA
+    https://github.com/anklimov/ArduinoOTA
 
 [env:stm32-enc2860]
 platform = ststm32
