--- a/platformio.ini
+++ b/platformio.ini
@@ -60,6 +60,7 @@ board = nrf52840_dk
 framework = arduino
 build_flags = !python get_build_flags.py nrf52840-5500
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     ESP_EEPROM
     DmxSimple
     DMXSerial
@@ -116,6 +117,7 @@ framework = arduino
 upload_speed = 921600
 build_flags = !python get_build_flags.py m5stack
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DmxSimple
     DMXSerial
     DmxDue
@@ -165,6 +167,7 @@ board = esp32-evb
 upload_speed = 115200
 build_flags = !python get_build_flags.py esp32-wifi
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DmxSimple
     DMXSerial
     DmxDue
@@ -212,6 +215,7 @@ framework = arduino
 board = due
 build_flags = !python get_build_flags.py due-5100
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
     ESP_EEPROM
     DMXSerial
@@ -258,6 +262,7 @@ board = megaatmega2560
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim-5100
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
     DmxDue
     DueFlashStorage
@@ -298,6 +303,7 @@ board = megaatmega2560
 framework = arduino
 build_flags = !python get_build_flags.py mega2560-5500
 lib_ignore =
+        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
         DHT sensor library for ESPx
         DmxDue
         DueFlashStorage
@@ -347,6 +353,7 @@ upload_protocol = esptool
 ;  --port=65280
 build_flags = !python get_build_flags.py esp8266-wifi
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DmxSimple
     DMXSerial
     DmxDue
@@ -397,6 +404,7 @@ framework = arduino
 upload_port = net:192.168.88.2:23000
 build_flags = !python get_build_flags.py mega2560-5100
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
     DmxDue
     DueFlashStorage
@@ -439,6 +447,7 @@ board = due
 ;build_flags = !bash check_custom_build_flags_due-5500.sh
 build_flags = !python get_build_flags.py due-5500
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
     ESPDMX
     ESP-Dmx
@@ -486,6 +495,7 @@ framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
 lib_ignore =
+       ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
         DHT sensor library for ESPx
         ESPDMX
         ESP-Dmx
@@ -534,6 +544,7 @@ board = megaatmega2560
 framework = arduino
 build_flags = !python get_build_flags.py controllino
 lib_ignore =
+    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
     DmxDue
     DueFlashStorage
@@ -578,6 +589,7 @@ upload_protocol = stlink
 debug_tool = stlink
 build_flags = !python get_build_flags.py stm32-enc2860
 lib_ignore =
+   ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
     DmxDue
     DueFlashStorage
