stop channels when get

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,8 @@ default_envs =
 ; Arduino DUE  + Ethernet shield Wiznet 5100
 ;    due-5100
 
+; Generic DUE
+     due
 ; Arduino DUE + Ethernet shield Wiznet 5500
 ;   due-5500
 
@@ -209,11 +211,59 @@ lib_deps =
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
 
-[env:due-5100]
+
+    [env:due-5100]
+    platform = atmelsam
+    framework = arduino
+    board = due
+    build_flags = !python get_build_flags.py due-5100
+    lib_ignore =
+        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+        DHT sensor library for ESPx
+        ESP_EEPROM
+        DMXSerial
+        DmxSimple
+        httpClient
+        ESPDMX
+        ESP-Dmx
+        WifiManager
+        Ethernet3
+        NRFFlashStorage
+        WebServer
+        UIPEthernet
+        EEPROM
+        M5Stack
+        ;ArduinoOTA
+    lib_deps =
+        https://github.com/sebnil/DueFlashStorage
+        https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+        https://github.com/anklimov/DS2482_OneWire
+        https://github.com/anklimov/DmxDue
+        ArduinoHttpClient
+        https://github.com/anklimov/aJson
+        https://github.com/anklimov/CmdArduino
+        https://github.com/anklimov/ModbusMaster
+        https://github.com/anklimov/Ethernet
+        https://github.com/knolleary/pubsubclient.git
+        https://github.com/anklimov/Artnet.git
+        FastLED@3.3.2
+        SD
+        SdFat
+        Adafruit Unified Sensor
+        DHT sensor library
+        https://github.com/arcao/Syslog.git
+        Streaming
+        ClosedCube HDC1080
+        SparkFun CCS811 Arduino Library@~1.0.7
+        Adafruit NeoPixel
+        https://github.com/anklimov/ArduinoOTA
+
+
+[env:due]
 platform = atmelsam
 framework = arduino
 board = due
-build_flags = !python get_build_flags.py due-5100
+build_flags = !python get_build_flags.py due
 lib_ignore =
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
@@ -225,6 +275,7 @@ lib_ignore =
     ESP-Dmx
     WifiManager
     Ethernet3
+    Ethernet2
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -240,7 +291,8 @@ lib_deps =
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
-    https://github.com/anklimov/Ethernet
+    https://github.com/arduino-libraries/Ethernet.git
+    ;https://github.com/anklimov/Ethernet2.git
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
