sysLog fixed, added logging library (for serial & syslog)

--- a/platformio.ini
+++ b/platformio.ini
@@ -264,6 +264,11 @@ platform = atmelsam
 framework = arduino
 board = due
 build_flags = !python get_build_flags.py due
+; Need to place arduinoOTA utility from Arduino IDE distribution to folder in your PATH
+;fix address and password
+;upload_flags =
+upload_command = arduinoOTA -address 192.168.88.21 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+upload_protocol = custom
 lib_ignore =
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
     DHT sensor library for ESPx
@@ -546,6 +551,8 @@ platform = atmelsam
 framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
+;upload_command = arduinoOTA -address 192.168.88.34 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
+;upload_protocol = custom
 lib_ignore =
        ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
         DHT sensor library for ESPx
@@ -555,7 +562,7 @@ lib_ignore =
         WifiManager
         DmxSimple
         httpClient
-        Ethernet
+        Ethernet2
         Ethernet3
         NRFFlashStorage
         WebServer
@@ -573,7 +580,7 @@ lib_deps =
         https://github.com/anklimov/aJson
         https://github.com/anklimov/CmdArduino
         https://github.com/anklimov/ModbusMaster
-        https://github.com/anklimov/Ethernet2
+        https://github.com/anklimov/Ethernet
         https://github.com/knolleary/pubsubclient.git
         https://github.com/anklimov/Artnet.git
         FastLED@3.3.2
