SlatusLed & reverting to Ethernet2 wiznet lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,13 @@ default_envs =
 ;    mega2560-5500
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
-;    lighthub21
+    lighthub21
 
 ; Arduino DUE  + Ethernet shield Wiznet 5100
 ;    due-5100
 
 ; Generic DUE
-     due
+;     due
 ; Arduino DUE + Ethernet shield Wiznet 5500
 ;   due-5500
 
@@ -551,6 +551,7 @@ platform = atmelsam
 framework = arduino
 board = due
 build_flags = !python get_build_flags.py lighthub21
+;upload_command = arduinoOTA -address 192.168.88.59 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
 ;upload_command = arduinoOTA -address 192.168.88.34 -port 65280 -username arduino -password password -b -upload /sketch -sketch $SOURCE
 ;upload_protocol = custom
 lib_ignore =
@@ -562,7 +563,7 @@ lib_ignore =
         WifiManager
         DmxSimple
         httpClient
-        Ethernet2
+        Ethernet
         Ethernet3
         NRFFlashStorage
         WebServer
@@ -580,7 +581,7 @@ lib_deps =
         https://github.com/anklimov/aJson
         https://github.com/anklimov/CmdArduino
         https://github.com/anklimov/ModbusMaster
-        https://github.com/anklimov/Ethernet
+        https://github.com/anklimov/Ethernet2
         https://github.com/knolleary/pubsubclient.git
         https://github.com/anklimov/Artnet.git
         FastLED@3.3.2
