Master compilation error due Wiznet 5100 library replacing was fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -70,6 +70,7 @@ lib_ignore =
     SdFat
     WifiManager
     Ethernet
+    Ethernet5100
     Ethernet3
     httpClient
     FastLED
@@ -125,6 +126,7 @@ lib_ignore =
     SD
     SdFat
     Ethernet
+    Ethernet5100
     Ethernet2
     Ethernet3
     EEPROM
@@ -175,6 +177,7 @@ lib_ignore =
     SD
     SdFat
     Ethernet
+    Ethernet5100
     Ethernet2
     Ethernet3
     EEPROM
@@ -225,6 +228,8 @@ lib_ignore =
     ESP-Dmx
     WifiManager
     Ethernet3
+    Ethernet
+    Ethernet2
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -240,7 +245,7 @@ lib_deps =
     https://github.com/anklimov/aJson
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -283,7 +288,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -309,6 +314,7 @@ lib_ignore =
         DueFlashStorage
         WifiManager
         Ethernet
+        Ethernet5100
         Ethernet3
         HTTPClient
         NRFFlashStorage
@@ -368,6 +374,7 @@ lib_ignore =
     Ethernet3
     Ethernet2
     Ethernet
+    Ethernet5100
     NRFFlashStorage
     UIPEthernet
     EEPROM
@@ -413,6 +420,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     Ethernet2
+    Ethernet
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -427,7 +435,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -504,6 +512,7 @@ lib_ignore =
         DmxSimple
         httpClient
         Ethernet
+        Ethernet5100
         Ethernet3
         NRFFlashStorage
         WebServer
@@ -553,6 +562,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     Ethernet2
+    Ethernet
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -567,7 +577,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -598,6 +608,7 @@ lib_ignore =
     WifiManager
     FastLED
     Ethernet
+    Ethernet5100
     DMXSerial
     DmxSimple
     httpClient
