MCP23017 inputs STATUSLED Compilation for all platforms WIFI_ENABLE option to allow wired connection for ESP Modbus, Syslog for ESP

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ default_envs =
 ;    mega2560-5500
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
-    lighthub21
+;    lighthub21
 
 ; Arduino DUE  + Ethernet shield Wiznet 5100
 ;    due-5100
@@ -73,6 +73,7 @@ lib_ignore =
     WifiManager
     Ethernet
     Ethernet3
+    Ethernet5100
     httpClient
     FastLED
     ESPDMX
@@ -108,7 +109,9 @@ lib_deps =
     https://github.com/anklimov/NRFFlashStorage
     https://github.com/adafruit/Adafruit_NeoPixel.git
     https://github.com/anklimov/ArduinoOTA
-;    https://github.com/livello/PrintEx#is-select-redecl
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+    https://github.com/arcao/Syslog.git
+
 
 
 
@@ -129,6 +132,7 @@ lib_ignore =
     Ethernet
     Ethernet2
     Ethernet3
+    Ethernet5100
     EEPROM
     Artnet
     UIPEthernet
@@ -160,6 +164,8 @@ lib_deps =
     M5Stack
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+    https://github.com/arcao/Syslog.git
 
 [env:esp32-wifi]
 platform = espressif32
@@ -179,6 +185,7 @@ lib_ignore =
     Ethernet
     Ethernet2
     Ethernet3
+    Ethernet5100
     EEPROM
     Artnet
     UIPEthernet
@@ -210,14 +217,16 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+    https://github.com/arcao/Syslog.git
 
 
-    [env:due-5100]
-    platform = atmelsam
-    framework = arduino
-    board = due
-    build_flags = !python get_build_flags.py due-5100
-    lib_ignore =
+[env:due-5100]
+platform = atmelsam
+framework = arduino
+board = due
+build_flags = !python get_build_flags.py due-5100
+lib_ignore =
         ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
         DHT sensor library for ESPx
         ESP_EEPROM
@@ -234,7 +243,7 @@ lib_deps =
         EEPROM
         M5Stack
         ;ArduinoOTA
-    lib_deps =
+lib_deps =
         https://github.com/sebnil/DueFlashStorage
         https://github.com/anklimov/Arduino-Temperature-Control-Library.git
         https://github.com/anklimov/DS2482_OneWire
@@ -243,7 +252,7 @@ lib_deps =
         https://github.com/anklimov/aJson
         https://github.com/anklimov/CmdArduino
         https://github.com/anklimov/ModbusMaster
-        https://github.com/anklimov/Ethernet
+        https://github.com/anklimov/Ethernet5100
         https://github.com/knolleary/pubsubclient.git
         https://github.com/anklimov/Artnet.git
         FastLED@3.3.2
@@ -257,9 +266,11 @@ lib_deps =
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
         https://github.com/anklimov/ArduinoOTA
+        https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 
 [env:due]
+;Experimental target with universal Ethernet Library
 platform = atmelsam
 framework = arduino
 board = due
@@ -281,6 +292,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     Ethernet2
+    Ethernet5100
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -311,6 +323,7 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 [env:mega2560slim-5100]
 platform = atmelavr
@@ -325,6 +338,7 @@ lib_ignore =
     DueFlashStorage
     WifiManager
     Ethernet3
+    Ethernet
     HTTPClient
     NRFFlashStorage
     WebServer
@@ -340,7 +354,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -353,6 +367,7 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 [env:mega2560-5500]
 platform = atmelavr
@@ -367,6 +382,7 @@ lib_ignore =
         WifiManager
         Ethernet
         Ethernet3
+        Ethernet5100
         HTTPClient
         NRFFlashStorage
         WebServer
@@ -394,6 +410,7 @@ lib_deps =
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
         https://github.com/anklimov/ArduinoOTA
+        https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 
 [env:esp8266-wifi]
@@ -424,6 +441,7 @@ lib_ignore =
     ArduinoHttpClient
     Ethernet3
     Ethernet2
+    Ethernet5100
     Ethernet
     NRFFlashStorage
     UIPEthernet
@@ -451,6 +469,7 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA.git
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 
 
@@ -470,6 +489,7 @@ lib_ignore =
     WifiManager
     Ethernet3
     Ethernet2
+    Ethernet
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -484,7 +504,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -496,6 +516,7 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 [env:due-5500]
 platform = atmelsam
@@ -514,6 +535,7 @@ lib_ignore =
     httpClient
     Ethernet
     Ethernet3
+    Ethernet5100
     NRFFlashStorage
     WebServer
     UIPEthernet
@@ -545,6 +567,7 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 [env:lighthub21]
 platform = atmelsam
@@ -565,6 +588,7 @@ lib_ignore =
         httpClient
         Ethernet
         Ethernet3
+        Ethernet5100
         NRFFlashStorage
         WebServer
         UIPEthernet
@@ -596,6 +620,7 @@ lib_deps =
         SparkFun CCS811 Arduino Library@~1.0.7
         Adafruit NeoPixel
         https://github.com/anklimov/ArduinoOTA
+        https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
 
 
 [env:controllino]
@@ -627,7 +652,7 @@ lib_deps =
     https://github.com/anklimov/CmdArduino
     https://github.com/anklimov/ModbusMaster
     https://github.com/anklimov/DMXSerial
-    https://github.com/anklimov/Ethernet
+    https://github.com/anklimov/Ethernet5100
     https://github.com/knolleary/pubsubclient.git
     https://github.com/anklimov/Artnet.git
     FastLED@3.3.2
@@ -640,6 +665,8 @@ lib_deps =
     SparkFun CCS811 Arduino Library@~1.0.7
     Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
+    https://github.com/arcao/Syslog.git
 
 [env:stm32-enc2860]
 platform = ststm32
@@ -688,3 +715,4 @@ lib_deps =
     UIPEthernet
     https://github.com/anklimov/NRFFlashStorage
     Adafruit NeoPixel
+    https://github.com/adafruit/Adafruit-MCP23017-Arduino-Library
