--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ default_envs =
 ;   due-5500
 
 ; ESP 8266
-;    esp8266-wifi
+    esp8266-wifi
 
 ; ESP-32
 ;    esp32-wifi
@@ -427,7 +427,8 @@ upload_protocol = esptool
 ;  --port=65280
 build_flags = !python get_build_flags.py esp8266-wifi
 lib_ignore =
-    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+    ;COMMENT/UNCOMMENT next line for software 1-wire driver  on/off
+    DS2482_OneWire
     DmxSimple
     DMXSerial
     DmxDue
