building flags & small bugfix (MQTT&TOGGLE)

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,10 +34,10 @@ default_envs =
 ;   due-5500
 
 ; ESP 8266
-    esp8266-wifi
+;    esp8266-wifi
 
 ; ESP-32
-;    esp32-wifi
+    esp32-wifi
 
 ; M5Stack core (ESP32 based)
 ;    m5stack
@@ -175,7 +175,8 @@ board = esp32-evb
 upload_speed = 115200
 build_flags = !python get_build_flags.py esp32-wifi
 lib_ignore =
-    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
+    ;COMMENT/UNCOMMENT next line for software 1-wire driver on/off
+    DS2482_OneWire   
     DmxSimple
     DMXSerial
     DmxDue
@@ -187,7 +188,6 @@ lib_ignore =
     Ethernet3
     Ethernet5100
     EEPROM
-    Artnet
     UIPEthernet
     ESP_EEPROM
     httpClient
