ESP32 stability fix + remove DMX

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,7 @@ default_envs =
 ;    esp8266-wifi
 
 ; ESP-32
-    esp32-wifi
+;    esp32-wifi
 
 ; M5Stack core (ESP32 based)
 ;    m5stack
@@ -170,13 +170,15 @@ lib_deps =
 [env:esp32-wifi]
 platform = espressif32
 framework = arduino
+monitor_filters = esp32_exception_decoder
+build_type = debug
 ;board = pico32
 board = esp32-evb
 upload_speed = 115200
 build_flags = !python get_build_flags.py esp32-wifi
 lib_ignore =
     ;COMMENT/UNCOMMENT next line for software 1-wire driver on/off
-    DS2482_OneWire   
+    ;DS2482_OneWire
     DmxSimple
     DMXSerial
     DmxDue
@@ -329,6 +331,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 ;upload_port = net:192.168.88.31:23
+upload_port = net:192.168.88.2:23000
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim-5100
 lib_ignore =
