Modbus v2 initialization fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -331,7 +331,7 @@ lib_deps =
 platform = atmelavr
 board = megaatmega2560
 ;upload_port = net:192.168.88.31:23
-upload_port = net:192.168.88.2:23000
+;upload_port = net:192.168.88.2:23000
 framework = arduino
 build_flags = !python get_build_flags.py mega2560slim-5100
 lib_ignore =
